<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_group_observe" >
        <PreferenceScreen
            android:summary="@string/pref_services_summary"
            android:title="@string/pref_services_title" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="service_mopera"
                android:title="@string/pref_service_mopera_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="service_spmode"
                android:title="@string/pref_service_spmode_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="service_imode"
                android:title="@string/pref_service_imode_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="service_unspec"
                android:summary="@string/pref_service_unspec_summary"
                android:title="@string/pref_service_unspec_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="service_unknown"
                android:title="@string/pref_service_unknown_title" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_group_notify" >
        <PreferenceScreen
            android:summary="@string/pref_notify_summary"
            android:title="@string/pref_notify_title" >
            <PreferenceCategory android:title="@string/pref_group_notify" >
                <RingtonePreference
                    android:defaultValue="content://settings/system/notification_sound"
                    android:key="notify_sound"
                    android:ringtoneType="notification"
                    android:summary="@string/pref_notify_sound_summary"
                    android:title="@string/pref_notify_sound_title" />

                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="notify_vibration"
                    android:summary="@string/pref_notify_vibration_summary"
                    android:title="@string/pref_notify_vibration_title" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_group_notify_launch" >
                <Preference
                    android:key="notify_launch_app"
                    android:summary="@string/pref_notify_launch_app_summary"
                    android:title="@string/pref_notify_launch_app_title" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_group_notify_network" >
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="notify_auto_connect"
                    android:summary="@string/pref_notify_auto_connect_summary"
                    android:title="@string/pref_notify_auto_connect_title" />

                <ListPreference
                    android:defaultValue="mobile"
                    android:dependency="notify_auto_connect"
                    android:entries="@array/entries_auto_connect_type"
                    android:entryValues="@array/entryvalues_auto_connect_type"
                    android:key="notify_auto_connect_type"
                    android:title="@string/pref_notify_auto_connect_type_title" />
                <ListPreference
                    android:defaultValue=""
                    android:enabled="false"
                    android:key="notify_auto_connect_apn"
                    android:title="@string/pref_notify_auto_connect_apn_title" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:dependency="notify_auto_connect"
                    android:key="notify_auto_connect_force"
                    android:summary="@string/pref_notify_auto_connect_force_summary"
                    android:title="@string/pref_notify_auto_connect_force_title" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_group_notify_test" >
                <Preference
                    android:key="test_notify"
                    android:title="@string/test_notify" />
            </PreferenceCategory>
        </PreferenceScreen>

        <EditTextPreference
            android:inputType="textVisiblePassword"
            android:key="exclude_hours"
            android:summary="@string/pref_exclude_hours_summary"
            android:title="@string/pref_exclude_hours_title" />
    </PreferenceCategory>

</PreferenceScreen>